# cssed-quicksearch-plugin

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
CVS/: Entries  Repository
po/: ChangeLog  POTFILES.in  cssed-quicksearch-plugin.pot  es.po  fr.po
po/CVS/: Entries  Repository
redhat/: cssed-quicksearch-plugin.spec
redhat/CVS/: Entries  Repository
src/: ChangeLog  Makefile.am  Makefile.in  quicksearch.c
src/CVS/: Entries  Repository
